--- a/src/app/beer-list/beer-list.component.html
+++ b/src/app/beer-list/beer-list.component.html
@@ -23,9 +23,9 @@
 					</ul>
 				</td>
 				<td>{{beer.price | currency}}</td>
-				<td><img src="{{beer.imagen}}" alt="{{beer.name}}" width="60%"></td>
+				<td><img src="{{beer.imagen}}" alt="{{beer.name}}" width="30%"></td>
 				<td><span *ngIf = "beer.stock <= 0"> Agotado </span>
-					<span *ngIf = "beer.stock > 0"> Disponible {{beer.stock}}</span>
+					<span *ngIf = "beer.stock > 0"> Disponible</span>
 				</td>
 				<td *ngIf = "beer.stock > 0">
 				<button (click) = "masCerveza(beer)">+</button></td>
