--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,5 +1,4 @@
-
-    <div class="container p-3 mb-2 bg-secondary text-white">
+<div class="container-fluid p-3 mb-2 bg-secondary text-white">
         <div class="row">
         <div class="col-sm">
             Contactos: almiron736@gmail.com
