--- a/src/app/beer-list/beer-list.component.html
+++ b/src/app/beer-list/beer-list.component.html
@@ -23,13 +23,13 @@
 					</ul>
 				</td>
 				<td>{{beer.price | currency}}</td>
-				<td><img [src]=beer.imagen [alt]=beer.name width="30%"></td>
+				<td><img [src]=beer.imagen [alt]=beer.name></td>
 				<td><span *ngIf = "beer.stock <= 0"> Agotado </span>
 					<span *ngIf = "beer.stock > 0"> Disponible ({{beer.stock}})</span>
 					<button (click) = "masCerveza(beer)">+</button>
 				<span *ngIf = "beer.stock > 0"><button (click) = "menosCerveza (beer)">-</button></span>
 			</td>
-			<td><input type="number" [(ngModel)] = "beer.stock"></td>
+			<td><input type="text" [(ngModel)] = "beer.stock" (keypress)="solonumeros ($event)"></td>
 			</tr>
 		</tbody>
 	</table>
