--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,6 @@
 <div class="fondo">
 <app-nav></app-nav>
-<div class="cervezas">
-<app-beer-list></app-beer-list>
-<app-beer-cart></app-beer-cart>
-</div>
+<router-outlet>
+</router-outlet>
 <app-footer></app-footer>
-<router-outlet></router-outlet>
 </div>
