--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -9,7 +9,7 @@
           <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Contacto</a>
+          <a class="nav-link" [routerLink]="['/about']" >Contacto</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Nosotros</a>
